# 5400_final_project

./: .gitignore  README.html  README.md  environment.yml  main.py  pyproject.toml  pytest.ini  q1.py  q3.py
data_process/: cat_or_dog.py  data_v1.py  data_v2.py
demo/: demo.py
model/: cats_logistic_pipeline.pkl  dogs_logistic_pipeline.pkl
q1/: dogs_feature_coefficients.csv  q1_report.md
q3/: q3.md
src/: __init__.py
src/data-collection/: combine_post.py  data_collection.py  filter_comment.py
src/data_preprocessing/: preprocessing.py
src/demo/: cat_vs_dog_demo.html
src/gpt_classifier_suggester/app/: streamlit_app.py
src/gpt_classifier_suggester/gpt/: suggestion.py
src/gpt_classifier_suggester/model/: cats_logistic_pipeline.pkl  dogs_logistic_pipeline.pkl
src/gpt_classifier_suggester/prediction/: predictor.py
src/img/: .gitattributes  cats_comments_comment_feature_coefficients.csv  cats_feature_coefficients.csv  cats_posts_feature_coefficients.csv  dogs_comments_comment_feature_coefficients.csv  dogs_posts_feature_coefficients.csv  top20_word_scores_style_text.csv  top20_word_scores_verb_text.csv
src/mod/: _init_.py  cat_vs_dog.py  engagement_classifier.py  engagement_regression.py  new_engagement_classifier.py  new_engagement_regression.py  replacement.py
src/reddit_engagement_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/data-collection/: cat_or_dog.py  combine_post.py  data_collection.py  data_v1.py  data_v2.py  filter_comment.py
src/utils/data_preprocessing/: preprocessing.py
tests/: data_split.py  test_cat_vs_dog.py  test_part1.py  tests.py
tests/output/: cats_comments_feature_coefficients.csv  cats_feature_coefficients.csv  cats_posts_feature_coefficients.csv  dogs_comments_comment_feature_coefficients.csv  dogs_feature_coefficients.csv  dogs_posts_feature_coefficients.csv  top20_word_scores_style_text.csv
