[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-engagement-analyzer"
version = "0.1.0"
description = "This project analyzes how different linguistic features—beyond just adjectives—affect user engagement in Reddit pet adoption posts, and builds tools to improve post effectiveness."
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Jiahui Liu", email = "jiahui@example.com" },
  { name = "Siru Wu", email = "sw1430@georgetown.edu" }
]

dependencies = [
  "pandas",
  "numpy",
  "matplotlib",
  "scikit-learn",
  "emoji",
  "pytest",
  "xgboost",
  "nltk",
  "spacy",
  "streamlit",
  "python-dotenv",
  "shap"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "jupyter",
  "black",
  "ruff"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
