[project]
name = "reddit-engagement-analyzer"
version = "0.1.0"
description = "Analyze and predict Reddit pet adoption post engagement using machine learning and linguistic features."
authors = [
  { name = "Jiahui Liu" },
  { name = "Siru Wu" },
  { name = "Yiqin Zhou" },
  { name = "Jiaqi Wei" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "emoji",
    "python-dotenv",
    "streamlit",
    "openai",
    "black",
    "ruff"
]

[tool.setuptools]
packages = ["mod", "gpt_classifier_suggester", "gpt_classifier_suggester.app", "gpt_classifier_suggester.gpt", "gpt_classifier_suggester.prediction"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
